--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h1>Soem hellow</h1>
+    <h1>Svenska Verb</h1>
+    <trainer></trainer>
 </div><!-- /.container -->
 
 
