--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
 <div class="container">
-    <h1>Svenska Verb</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <h1>Svenska Verb</h1>
+        </div>
+    </div>
     <trainer></trainer>
 </div><!-- /.container -->
 
