--- a/src/app/static/styles/main.scss
+++ b/src/app/static/styles/main.scss
@@ -6,5 +6,23 @@
 
 .verb-question {
   margin-top: 2rem;
+}
 
+.navbar-inverse {
+    background-color: #64B5F6;
+    border-color: #64B5F6;
+}
+
+.header-title {
+  color: #FFF176;
+  margin-top: 10px;
+  font-size: 16px;
+}
+
+.navbar {
+  min-height: 0;
+}
+
+.quiz {
+  font-size: 36px;
 }
