--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,12 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Svenska Verb</h1>
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <h1 class="header-title">Svenska Verb</h1>
         </div>
     </div>
+</nav>
+
+<div class="container">
     <trainer></trainer>
 </div><!-- /.container -->
 
